# collatzer

./: .gitignore  LICENSE  collatzer.cabal
app/: Main.hs
cli/: Main.hs
scripts/: test01.sh
src/Collatzer/: Main.hs
