cabal-version: 2.4
name:          collatzer
version:       0.1
synopsis:      Small web-service to test things on
description:   Small web-service to test things on.
author:        Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
license:       BSD-3-Clause
category:      Web

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:  Collatzer.Main
  build-depends:
    , aeson                 ^>=1.5.6.0
    , async
    , base                  ^>=4.16.0.0
    , http-types
    , lrucache
    , optparse-applicative  ^>=0.16.1.0
    , text
    , wai
    , warp

  -- for remote eventlog
  build-depends:    eventlog-socket

executable collatzer-server
  default-language: Haskell2010
  hs-source-dirs:   app
  main-is:          Main.hs
  ghc-options:      -rtsopts -eventlog -threaded -with-rtsopts=-N8
  build-depends:
    , base
    , collatzer

executable collatzer-client
  default-language: Haskell2010
  hs-source-dirs:   cli
  main-is:          Main.hs
  ghc-options:      -rtsopts -threaded
  build-depends:
    , async
    , base
    , clock
    , deepseq
    , http-client
    , optparse-applicative  ^>=0.16.1.0
    , splitmix
